texi2html/test/invalid/res_info/texi_code_not_closed/code_not_closed.texi.first
\input texinfo @c -*-texinfo-*-
@settitle code_not_closed

@node Top
@top Missing closing bracket

@menu
* chapter::
@end menu

@code{not closed

@node chapter
@chapter chapter

@code{still not closed

@bye
